# LoLoSwitcher

./: .gitignore  AccessControl.cpp  AccessControl.h  CMakeLists.txt  Config.cpp  Config.h  EventQueue.cpp  EventQueue.h  KeyLayout.cpp  KeyLayout.h  Main.cpp  Main.h  ParseHelper.cpp  ParseHelper.h  license_bsd.txt  readme.md  readme.txt
config_sample/joystick_256/: config.ini
config_sample/joystick_32768/: config.ini
config_sample/keyboard/: config.ini
